Small improvements across several pages. Improved spacing and corrected some merge errors.

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -140,7 +140,7 @@ body {
 
 .weekly-highlights p {
   font-size: 0.9rem;
-  color: #756e6e;
+  color: #2f2e2e;
 }
 
 /*PROFILE*/
